Updated the webpage contents

--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Innovative DevOps Solutions | Your Pathway to Digital Excellence</title>
+    <title>DevOps: Leading Web & AI Development Solutions</title>
     <meta name="description"
-        content="Explore top-tier web development and consultancy services at DevOps. Our blend of modern tech know-how and strategic insights provides unique solutions aligning with your business goals. Elevate your online presence with us.">
-    <meta property="og:title" content="Innovative DevOps Solutions | Your Pathway to Digital Excellence">
+        content="DevOps - Empowering businesses with cutting-edge web development and AI integration to drive digital innovation and operational efficiency.">
+    <meta property="og:title" content="DevOps: Leading Web & AI Development Solutions">
     <meta property="og:description"
-        content="Explore top-tier web development and consultancy services at DevOps. Our blend of modern tech know-how and strategic insights provides unique solutions aligning with your business goals. Elevate your online presence with us.">
+        content="DevOps - Empowering businesses with cutting-edge web development and AI integration to drive digital innovation and operational efficiency.">
     <link rel="apple-touch-icon" sizes="57x57" href="apple-icon-57x57.png" />
     <link rel="apple-touch-icon" sizes="60x60" href="apple-icon-60x60.png" />
     <link rel="apple-touch-icon" sizes="72x72" href="apple-icon-72x72.png" />
@@ -39,18 +39,45 @@
     </style>
 </head>
 
-<body
-    class="bg-gradient-to-tr from-green-400 to-blue-500 flex items-center justify-center h-screen text-white ligatures">
-    <div class="text-center space-y-5 px-5 z-10 relative max-w-2xl mx-auto">
-        <h1 class="text-5xl font-bold leading-none">Welcome to DevOps</h1>
-        <p class="text-lg leading-relaxed mt-4 text-justify">At DevOps, we are committed to providing top-tier web
-            development and
-            consulting services. Our expertise in modern technologies, combined with a deep understanding of digital
-            strategies and operational excellence, enables us to deliver tailor-made solutions that align with your
-            business goals. Whether you're a start-up or an established enterprise, we're ready to take your online
-            presence to the next level.</p>
-        <p class="text-lg leading-relaxed mt-4 text-justify">To learn more about our services, do not hesitate to reach
-            out at <a href="mailto:hi@devops.com.bd" class="underline text-white">hi@devops.com.bd</a>.</p>
+<body class="h-screen leading-relaxed text-gray-800 bg-gradient-to-br from-green-300 to-blue-400 ligatures">
+    <div class="container px-4 mx-auto sm:px-6 lg:px-8">
+        <header class="py-5 text-center">
+            <h1 class="text-3xl font-extrabold text-gray-700 sm:text-4xl md:text-5xl">Transform Your Business with
+                DevOps</h1>
+            <h2 class="mt-6 text-lg font-extrabold text-gray-600 sm:text-2xl md:text-2xl">Web & AI Solutions</h2>
+        </header>
+
+        <section class="mt-6">
+            <article class="space-y-6 text-lg leading-relaxed md:text-xl">
+                <p class="mb-4">At <span class="font-bold text-blue-600">DevOps</span>, we blend innovation in web
+                    development with cutting-edge AI technologies to create solutions that redefine the digital
+                    landscape. Our team, adept in the latest technological advancements, is committed to elevating your
+                    business operations through bespoke digital and AI-integrated solutions.</p>
+
+                <p class="mb-4">Our expertise extends beyond traditional web development. We specialize in integrating
+                    AI models to automate and optimize business processes, making your operations more efficient and
+                    data-driven. Whether it's enhancing user experience, automating routine tasks, or deriving insights
+                    from data, our AI solutions are tailored to meet your specific business needs.</p>
+
+                <p class="mb-4">We understand the dynamics of the digital world and the transformative power of AI.
+                    Combining these two realms, we ensure that your business not only stays ahead of the curve but also
+                    sets new benchmarks in operational excellence and innovation.</p>
+
+                <p class="mb-4">Our comprehensive approach to AI integration focuses on enhancing every aspect of your
+                    business. From intelligent automation to advanced data analytics, we leverage AI to deliver smarter,
+                    more efficient, and highly personalized experiences for your customers. This integration is not just
+                    about technology; it’s about creating a sustainable and innovative future for your business.</p>
+
+                <p class="mb-4">At <span class="font-bold text-blue-600">DevOps</span>, we believe that the future
+                    belongs to those who innovate and adapt. Our dedicated team is here to ensure that your journey
+                    towards digital transformation is smooth, impactful, and future-proof. Partner with us to harness
+                    the power of AI and web technologies to unlock new potentials and drive unparalleled growth.</p>
+
+                <p>Ready to revolutionize your digital strategy with AI? Connect with us at <a
+                        href="mailto:hi@devops.com.bd" class="text-blue-600 hover:text-blue-800">hi@devops.com.bd</a>
+                    for a consultation and explore the endless possibilities.</p>
+            </article>
+        </section>
     </div>
 </body>
 
