Updated CSS gradient

--- a/index.html
+++ b/index.html
@@ -39,12 +39,12 @@
     </style>
 </head>
 
-<body class="h-screen leading-relaxed text-gray-800 bg-gradient-to-br from-green-300 to-blue-400 ligatures">
+<body class="h-screen leading-relaxed text-gray-800 bg-gradient-to-tr from-green-400 to-blue-500 ligatures">
     <div class="container px-4 mx-auto sm:px-6 lg:px-8">
         <header class="py-5 text-center">
-            <h1 class="text-3xl font-extrabold text-gray-700 sm:text-4xl md:text-5xl">Transform Your Business with
+            <h1 class="text-3xl font-extrabold text-gray-800 sm:text-4xl md:text-5xl">Transform Your Business with
                 DevOps</h1>
-            <h2 class="mt-6 text-lg font-extrabold text-gray-600 sm:text-2xl md:text-2xl">Web & AI Solutions</h2>
+            <h2 class="mt-6 text-lg font-extrabold text-gray-700 sm:text-2xl md:text-2xl">Web & AI Solutions</h2>
         </header>
 
         <section class="mt-6">
